--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="./arquivos/365008870_312723084503104_3016384612425854484_n.jpg" alt="">
             <h2>Digital evolution</h2>
         </div>
         <div class="menu">
@@ -49,16 +48,107 @@
     </header>
     <main>
         <div class="ateendente">
-            <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+saber+mais+sobtre+a+Digital+Evolution+e+como+ela+pode+contribuir+para+a+minha+empresa.&type=phone_number&app_absent=0">
+            <a
+                href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+saber+mais+sobtre+a+Digital+Evolution+e+como+ela+pode+contribuir+para+a+minha+empresa.&type=phone_number&app_absent=0">
                 <p id="description_w">Converse com um atendente</p>
                 <img src="./arquivos/WhatsApp.svg.webp" alt="" id="whats">
-          </a>
+            </a>
         </div>
-        
-        <marquee behavior="scrol" direction="left" id="servicos">
-            <p>A logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo
-                logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo
-                logotipo logotipo logotipo Z</p>
+
+        <marquee behavior="scroll" direction="left" id="servicos" loop="-1" scrollamount="20" >
+            <!-- <div class="logos_clientes"> -->
+                <img src="./arquivos/logos/1.png" alt="">
+                <img src="./arquivos/logos/2.png" alt="">
+                <img src="./arquivos/logos/3.png" alt="">
+                <img src="./arquivos/logos/4.png" alt="">
+                <img src="./arquivos/logos/5.png" alt="">
+                <img src="./arquivos/logos/6.png" alt="">
+                <img src="./arquivos/logos/7.png" alt="">
+                <img src="./arquivos/logos/8.png" alt="">
+                <img src="./arquivos/logos/9.png" alt="">
+                <img src="./arquivos/logos/10.png" alt="">
+                <img src="./arquivos/logos/11.png" alt="">
+                <img src="./arquivos/logos/12.png" alt="">
+                <img src="./arquivos/logos/13.png" alt="">
+                <img src="./arquivos/logos/1.png" alt="">
+                <img src="./arquivos/logos/2.png" alt="">
+                <img src="./arquivos/logos/3.png" alt="">
+                <img src="./arquivos/logos/4.png" alt="">
+                <img src="./arquivos/logos/5.png" alt="">
+                <img src="./arquivos/logos/6.png" alt="">
+                <img src="./arquivos/logos/7.png" alt="">
+                <img src="./arquivos/logos/8.png" alt="">
+                <img src="./arquivos/logos/9.png" alt="">
+                <img src="./arquivos/logos/10.png" alt="">
+                <img src="./arquivos/logos/11.png" alt="">
+                <img src="./arquivos/logos/12.png" alt="">
+                <img src="./arquivos/logos/13.png" alt="">
+                <img src="./arquivos/logos/1.png" alt="">
+                <img src="./arquivos/logos/2.png" alt="">
+                <img src="./arquivos/logos/3.png" alt="">
+                <img src="./arquivos/logos/4.png" alt="">
+                <img src="./arquivos/logos/5.png" alt="">
+                <img src="./arquivos/logos/6.png" alt="">
+                <img src="./arquivos/logos/7.png" alt="">
+                <img src="./arquivos/logos/8.png" alt="">
+                <img src="./arquivos/logos/9.png" alt="">
+                <img src="./arquivos/logos/10.png" alt="">
+                <img src="./arquivos/logos/11.png" alt="">
+                <img src="./arquivos/logos/12.png" alt="">
+                <img src="./arquivos/logos/13.png" alt="">
+                <img src="./arquivos/logos/1.png" alt="">
+                <img src="./arquivos/logos/2.png" alt="">
+                <img src="./arquivos/logos/3.png" alt="">
+                <img src="./arquivos/logos/4.png" alt="">
+                <img src="./arquivos/logos/5.png" alt="">
+                <img src="./arquivos/logos/6.png" alt="">
+                <img src="./arquivos/logos/7.png" alt="">
+                <img src="./arquivos/logos/8.png" alt="">
+                <img src="./arquivos/logos/9.png" alt="">
+                <img src="./arquivos/logos/10.png" alt="">
+                <img src="./arquivos/logos/11.png" alt="">
+                <img src="./arquivos/logos/12.png" alt="">
+                <img src="./arquivos/logos/13.png" alt="">
+                <img src="./arquivos/logos/1.png" alt="">
+                <img src="./arquivos/logos/2.png" alt="">
+                <img src="./arquivos/logos/3.png" alt="">
+                <img src="./arquivos/logos/4.png" alt="">
+                <img src="./arquivos/logos/5.png" alt="">
+                <img src="./arquivos/logos/6.png" alt="">
+                <img src="./arquivos/logos/7.png" alt="">
+                <img src="./arquivos/logos/8.png" alt="">
+                <img src="./arquivos/logos/9.png" alt="">
+                <img src="./arquivos/logos/10.png" alt="">
+                <img src="./arquivos/logos/11.png" alt="">
+                <img src="./arquivos/logos/12.png" alt="">
+                <img src="./arquivos/logos/13.png" alt="">
+                <img src="./arquivos/logos/1.png" alt="">
+                <img src="./arquivos/logos/2.png" alt="">
+                <img src="./arquivos/logos/3.png" alt="">
+                <img src="./arquivos/logos/4.png" alt="">
+                <img src="./arquivos/logos/5.png" alt="">
+                <img src="./arquivos/logos/6.png" alt="">
+                <img src="./arquivos/logos/7.png" alt="">
+                <img src="./arquivos/logos/8.png" alt="">
+                <img src="./arquivos/logos/9.png" alt="">
+                <img src="./arquivos/logos/10.png" alt="">
+                <img src="./arquivos/logos/11.png" alt="">
+                <img src="./arquivos/logos/12.png" alt="">
+                <img src="./arquivos/logos/13.png" alt="">
+                <img src="./arquivos/logos/1.png" alt="">
+                <img src="./arquivos/logos/2.png" alt="">
+                <img src="./arquivos/logos/3.png" alt="">
+                <img src="./arquivos/logos/4.png" alt="">
+                <img src="./arquivos/logos/5.png" alt="">
+                <img src="./arquivos/logos/6.png" alt="">
+                <img src="./arquivos/logos/7.png" alt="">
+                <img src="./arquivos/logos/8.png" alt="">
+                <img src="./arquivos/logos/9.png" alt="">
+                <img src="./arquivos/logos/10.png" alt="">
+                <img src="./arquivos/logos/11.png" alt="">
+                <img src="./arquivos/logos/12.png" alt="">
+                <img src="./arquivos/logos/13.png" alt="">
+            <!-- </div> -->
         </marquee>
         <h4 class="nossos">CONHEÇA NOSSOS SERVIÇOS</h4>
         <section>
